--- a/frontend/src/components/ExpenseTable.css
+++ b/frontend/src/components/ExpenseTable.css
@@ -23,6 +23,18 @@
   padding: 0.75rem 1rem;
 }
 
+.expense-table__th-checkbox,
+.expense-table__checkbox {
+  width: 3rem;
+  text-align: center;
+}
+
+.expense-table__checkbox input,
+.expense-table__th-checkbox input {
+  width: 1rem;
+  height: 1rem;
+}
+
 .expense-table__th-actions {
   text-align: right;
 }
@@ -65,6 +77,11 @@
   border: 1px solid rgba(248, 113, 113, 0.4);
   color: #f87171;
   background-color: transparent;
+}
+
+.expense-table__delete-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 .expense-table__empty {
